--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="form" novalidate (ngSubmit)="onSubmit()">
+  <input formControlName="username">
+  <input formControlName="password" type="password">
+  <button type="submit">Login</button>
+</form>
+
+<pre>{{ form.value | json }}</pre>
